# openclaw-ros

./: .gitignore  DEVELOPMENT_CONTRACT.md  INTERFACES.md  OBSERVABILITY_CONTRACT.md  README.md  SIMULATION_CONTRACT.md  STATUS.md  VERIFICATION_CONTRACT.md
blogs/: 06_camera_surveillance-gemini-3-flash-autonomous_orchestration_milestone.md  2026-02-13-sim-to-real-camera-capture.md  2026-02-13-the-collaborative-lab.md  2026-02-13-xvfb-simulation-milestone.md  2026-02-16_autonomous_orchestration_milestone.md  2026-02-16_camera_surveillance_opus_milestone.md  2026-02-16_debugging_camera_surveillance_lessons_learned.md  2026-02-18-surveillance-system-development-journey.md  PROJECTS_BLOG_MAPPING.md  blog_post.md
blogs/analysis/: 2026-02-23_implementation_comparison_claude_glm_gemini.md
blogs/project_milestones/: 01_blink_talker-first-ros2-milestone-gemini-3-flash.md  02_turtle_talker-first-simulation-milestone-gemini-3-flash.md  04_yolo_detector-yolo-intelligence-milestone-gemini-3-flash.md  05_surveillance_pro-gemini-3-flash-surveillance_architecture_and_debugging.md  06_camera_surveillance-gemini-3-flash-live_test_report.md  06_camera_surveillance-gemini-3-flash-milestone_surveillance.md  07-camera-surveillance-opus-4-6-camera_surveillance_opus_milestone.md  10_camera_surveillance-glm5-python-pivot.md  11-camera-surveillance-glm-5-trial-2-surveillance_system_development_journey.md
blogs/published/: blog_post.md
projects/02_turtle_talker/docs/: PLAN.md  STATUS.md
projects/02_turtle_talker/scripts/: run_acceptance_plumbing.sh
projects/03_camera_capture/docs/: PLAN.md  STATUS.md
projects/04_yolo_detector/docs/: PLAN.md  STATUS.md
projects/04_yolo_detector/scripts/: benchmark_yolo.sh
projects/04_yolo_detector/tests/: .live_audit_30s.sh.swp  live_audit_30s.sh
projects/05_camera_surveillance/docs/: PLAN.md  STATUS.md
projects/05_camera_surveillance/tests/: manual_verification.sh  test_pipeline.sh
projects/05_surveillance_pro/docs/: PLAN.md  STATUS.md
projects/05_surveillance_pro/tests/: run_simulation.sh
projects/06_camera_surveillance/docs/: PLAN.md  STATUS.md  VERIFICATION_CONTRACT.md
projects/06_camera_surveillance/scripts/: save_test_img.py
projects/07-camera-surveillance-opus-4-6/: README.md  requirements.txt
projects/07-camera-surveillance-opus-4-6/config/: surveillance_config.yaml
projects/07-camera-surveillance-opus-4-6/launch/: surveillance_launch.py
projects/07-camera-surveillance-opus-4-6/nodes/: alert_node.py  camera_capture_node.py  person_detector_node.py  snapshot_node.py
projects/07-camera-surveillance-opus-4-6/scripts/: snapshot.sh  start.sh  stop.sh  test_detection.sh
projects/08-camera-surveillance-kimi-2-5/: README.md
projects/08-camera-surveillance-kimi-2-5/src/camera_surveillance/: package.xml  setup.py
projects/08-camera-surveillance-kimi-2-5/src/camera_surveillance/camera_surveillance/: __init__.py  camera_node.py  capture_test_frame.py  detector_node.py  email_node.py
projects/08-camera-surveillance-kimi-2-5/src/camera_surveillance/config/: surveillance.yaml
projects/08-camera-surveillance-kimi-2-5/src/camera_surveillance/launch/: surveillance.launch.py
projects/09-camera-surveillance-kimi-2-5-trial-2/: README.md
projects/09-camera-surveillance-kimi-2-5-trial-2/ros2_ws/src/camera_node/: package.xml
projects/09-camera-surveillance-kimi-2-5-trial-2/ros2_ws/src/camera_node/camera_node/: camera_publisher.py
projects/09-camera-surveillance-kimi-2-5-trial-2/ros2_ws/src/capture_service/: package.xml  setup.py
projects/09-camera-surveillance-kimi-2-5-trial-2/ros2_ws/src/capture_service/capture_service/: __init__.py  capture_client.py  capture_server.py
projects/09-camera-surveillance-kimi-2-5-trial-2/ros2_ws/src/surveillance_bringup/: package.xml  setup.py
projects/09-camera-surveillance-kimi-2-5-trial-2/ros2_ws/src/surveillance_bringup/launch/: surveillance.launch.py
projects/10-camera-surveillance-glm-5/: README.md  capture_frame.py  requirements.txt  run.sh  test_components.sh
projects/11-camera-surveillance-glm-5-trial-2/: README.md  monitor.sh  run.sh
projects/11-camera-surveillance-glm-5-trial-2/src/surveillance_ros/: package.xml  setup.cfg  setup.py
projects/11-camera-surveillance-glm-5-trial-2/src/surveillance_ros/config/: surveillance.yaml
projects/11-camera-surveillance-glm-5-trial-2/src/surveillance_ros/launch/: surveillance.launch.py
projects/11-camera-surveillance-glm-5-trial-2/src/surveillance_ros/resource/: surveillance_ros
projects/11-camera-surveillance-glm-5-trial-2/src/surveillance_ros/surveillance_ros/: __init__.py  detector_node.py  notification_node.py
projects/BlinkLED/: blink_led.py
projects/blink_talker/: package.xml  setup.py
projects/blink_talker/blink_talker/: listener.py
projects/blink_talker/install/blink_talker/share/blink_talker/: package.dsv  package.ps1  package.sh  package.zsh
skills/: ros2-contract-guard.skill  ros2-diag-health.skill  ros2-discovery.skill  ros2-generation-pro.skill  ros2-simulation.skill
(+138 files in other folders)
