<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blink_talker</name>
  <version>0.0.1</version>
  <description>Blinking Talker Listener Project</description>
  <maintainer email="rosie@openclaw.ai">Rosie</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-gpiozero</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
