<?xml version="1.0"?>
<package format="3">
  <name>camera_surveillance</name>
  <version>1.0.0</version>
  <description>ROS2 camera surveillance system with person detection and email alerts</description>
  <maintainer email="rosie.orchestrate@gmail.com">Rosie</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
