<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surveillance_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for ROS2 Camera Surveillance System</description>
  <maintainer email="rosie.orchestrate@gmail.com">Noah Ploch</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>camera_ros</exec_depend>
  <exec_depend>capture_service</exec_depend>
  <exec_depend>detection_node</exec_depend>
  <exec_depend>email_node</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>